# cuszp2

./: .gitignore  README.md  dataset-preparation.py  flake.nix
double-precision-results/: 0-dataset-preparation.py  2-execution.py  CMakeLists.txt
double-precision-results/examples/: gsz_o.cpp  gsz_p.cpp
double-precision-results/include/: GSZ.h  GSZ_entry.h
double-precision-results/src/: GSZ.cu  GSZ_entry.cu  GSZ_utility.cu
drawing-scripts/: draw.py
drawing-scripts/rel-1e-2-com/: problem.p  rel-1e-2-compress.eps  yafan.txt
drawing-scripts/rel-1e-2-dec/: backup  problem.p  rel-1e-2-decompress.eps  yafan.txt
drawing-scripts/rel-1e-3-com/: backup  problem.p  rel-1e-3-compress.eps  run.sh  yafan.txt
drawing-scripts/rel-1e-3-dec/: backup  problem.p  rel-1e-3-decompress.eps  yafan.txt
drawing-scripts/rel-1e-4-com/: backup  problem.p  rel-1e-4-compress.eps  yafan.txt
drawing-scripts/rel-1e-4-dec/: backup  problem.p  rel-1e-4-decompress.eps  yafan.txt
main-results/: 0-compilation.py  1-execution.py  CMakeLists.txt
main-results/examples/: CMakeLists.txt
main-results/include/: GSZ.h  GSZ_entry.h
ramses/: README.md  double-precision-results.sh  main-results.sh  slurm-1135032.out  slurm-1135042.out  slurm-1216776.out  slurm-1216800.out  slurm-1222647.out  slurm-1222687.out  verify-oom-double.patch  verify-oom-float.patch
rtm-evaluation-results/: 2-execution.py  3-visualization.py
rtm-evaluation-results/examples/: gsz_o.cpp  gsz_p.cpp
rtm-evaluation-results/include/: GSZ_timer.h  GSZ_utility.h
rtm-evaluation-results/src/: GSZ.cu  GSZ_entry.cu  (+2 more)
